<resources>

    <string name="server_client_id">527393220270-382qo3r42gfa795lk53q06ktm1joi4rn.apps.googleusercontent.com</string>

    <string name="app_name">OnboardingAssignment</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="signIn">로그인</string>
    <string name="signUp">회원가입</string>
    <string name="guide_google_login">구글 계정으로 간편 로그인</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleSignUp">회원가입</string>
    <string name="idForm">아이디(영어/숫자 조합 12자 이하)</string>
    <string name="passwordForm">비밀번호(영어/숫자/특수문자 조합 12자 이하)</string>
    <string name="nameForm">이름</string>
    <string name="nicknameForm">닉네임</string>
    <string name="emailForm">이메일</string>
    <string name="back">뒤로</string>
    <string name="complete">확인</string>

    <string name="guide_input_id">아이디를 입력하세요.</string>
    <string name="guide_input_pw">비밀번호를 입력하세요.</string>
    <string name="guide_input_id_pw">아이디 / 비밀번호를 확인하세요.</string>
    <string name="guide_check_id">아이디를 확인하세요.</string>
    <string name="guide_check_pw">비밀번호를 확인하세요.</string>
    <string name="guide_check_nickname">닉네임을 확인하세요.</string>
    <string name="guide_check_name">이름을 확인하세요.</string>
    <string name="guide_check_email">이메일을 확인하세요.</string>

    <string name="complete_sign_in">로그인 성공</string>
    <string name="complete_sign_up">회원가입 성공</string>


    <string name="pattern_id">^(?=.*[A-Za-z])(?=.*[0-9])[A-Za-z[0-9]]{8,20}$</string>
    <string name="pattern_pw">^(?=.*[A-Za-z])(?=.*[0-9])(?=.*[$@$!%*#?&amp;.])[A-Za-z[0-9]$@$!%*#?&amp;.]{8,16}$</string>
    <string name="pattern_email">비밀번호를 입력하세요.</string>
    <string name="input_title">제목을 입력해 주세요</string>
    <string name="input_content">내용을 입력해주세요</string>
    <string name="title_name">제목</string>
    <string name="writer_name">작성자</string>


</resources>