<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="30dp"
    tools:context=".presentation.post.PostCreateFragment">


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingVertical="16dp"
        android:gravity="start"
        android:hint="@string/input_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:hint="@string/input_content"
        app:layout_constraintEnd_toEndOf="@id/et_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/et_title"
        app:layout_constraintTop_toBottomOf="@id/et_title" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_post_cancel"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="@id/et_content"
        app:layout_constraintTop_toBottomOf="@id/et_content"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_post_complete"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/complete"
        app:layout_constraintStart_toEndOf="@id/btn_post_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_post_cancel"
        app:layout_constraintBottom_toBottomOf="@id/btn_post_cancel" />



</androidx.constraintlayout.widget.ConstraintLayout>